<resources>
    <string name="app_name">Remindr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_large_icon">login_large_icon</string>
    <string name="register_large_icon">register_large_icon</string>
    <string name="don_t_have_an_account">Do not have an account yet?</string>
    <string name="dropped_pin">dropped_pin</string>
    <string name="add_coordinates">add coordinates</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="poi">poi</string>
</resources>